--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@ label {
     font-style: normal;
 }
 
+div{
+box-shadow: noneL
+}
+
 #fontlabel {
     display: block;
     font-size: 12px;
@@ -70,6 +74,15 @@ table{
     border-radius:10px;
 }
 
+.buttonData:MouseOver {
+    background-color:#454597;
+    color: #fff;
+    border:none;
+    height:40px;
+    width:70px;
+    border-radius:10px;
+}
+
 .ques1cButtons {
     background-color:blue;
     color: #fff;
@@ -88,11 +101,12 @@ select{
     border-color: black;
 }
 div {
-    background-color: white;
+    background-color: whilte;
     padding: 15px;
     margin: 10px 0;
     border-radius: 5px; 
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+    border: 1px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 #addTask {
