--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,13 @@ label {
     font-size: 12px;
     font-style: normal;
 }
-
-div{
-box-shadow: noneL
+.heading{
+    color: blue;
+    font-style: oblique;
+    font-weight: 800;
 }
+
+
 
 #fontlabel {
     display: block;
