--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ select{
     border-color: black;
 }
 div {
-    background-color: whilte;
+    background-color: white;
     padding: 15px;
     margin: 10px 0;
     border-radius: 5px; 
